updated release script to check for java and maven versions